--- a/SimpleFileSystemNoDI/packages.config
+++ b/SimpleFileSystemNoDI/packages.config
@@ -1,14 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.AspNet.Cryptography.Internal" version="1.0.0-beta6-11547" targetFramework="net451" />
-  <package id="Microsoft.AspNet.DataProtection" version="1.0.0-beta6-11547" targetFramework="net451" />
-  <package id="Microsoft.AspNet.DataProtection.Abstractions" version="1.0.0-beta6-11547" targetFramework="net451" />
-  <package id="Microsoft.AspNet.DataProtection.Extensions" version="1.0.0-beta6-11547" targetFramework="net451" />
-  <package id="Microsoft.Framework.Configuration" version="1.0.0-beta6-11520" targetFramework="net451" />
-  <package id="Microsoft.Framework.Configuration.Abstractions" version="1.0.0-beta6-11520" targetFramework="net451" />
-  <package id="Microsoft.Framework.Configuration.Binder" version="1.0.0-beta6-11520" targetFramework="net451" />
-  <package id="Microsoft.Framework.DependencyInjection" version="1.0.0-beta6-11523" targetFramework="net451" />
-  <package id="Microsoft.Framework.DependencyInjection.Abstractions" version="1.0.0-beta6-11523" targetFramework="net451" />
-  <package id="Microsoft.Framework.Logging.Abstractions" version="1.0.0-beta6-11516" targetFramework="net451" />
-  <package id="Microsoft.Framework.OptionsModel" version="1.0.0-beta6-11492" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Cryptography.Internal" version="1.0.0-rc1-final" targetFramework="net452" />
+  <package id="Microsoft.AspNet.DataProtection" version="1.0.0-rc1-final" targetFramework="net452" />
+  <package id="Microsoft.AspNet.DataProtection.Abstractions" version="1.0.0-rc1-final" targetFramework="net452" />
+  <package id="Microsoft.AspNet.DataProtection.Extensions" version="1.0.0-rc1-final" targetFramework="net452" />
+  <package id="Microsoft.Extensions.Configuration" version="1.0.0-rc1-final" targetFramework="net452" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="1.0.0-rc1-final" targetFramework="net452" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="1.0.0-rc1-final" targetFramework="net452" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="1.0.0-rc1-final" targetFramework="net452" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.0.0-rc1-final" targetFramework="net452" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="1.0.0-rc1-final" targetFramework="net452" />
+  <package id="Microsoft.Extensions.OptionsModel" version="1.0.0-rc1-final" targetFramework="net452" />
+  <package id="Microsoft.Extensions.PlatformAbstractions" version="1.0.0-rc1-final" targetFramework="net452" />
+  <package id="Microsoft.Extensions.Primitives" version="1.0.0-rc1-final" targetFramework="net452" />
 </packages>
